Dev-feature[Swagger]: Added some swagger docs
